# ai-observability-lakehouse

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: agent_event.py  compliance_event.py  data_quality.py  deepseek_client.py  dim_model.py  evaluation_event.py  feedback_event.py  guardrail_event.py  langfuse_generation.py  langfuse_score.py  langfuse_trace.py  llm_event.py  logging_utils.py  model_deployment_event.py  model_pricing.py  model_version_dimension.py  orchestration_event.py  org_dimension.py  pipeline_metadata.py  platform_health_metric.py  prompt_dimension.py  retrieval_event.py  warehouse_contract.py
config/: platform_health_thresholds.yaml  sla_rules.yaml
docs/: README.md  architecture.md  architecture_unification_plan.md  benchmark_results.md  dashboard_implementation_plan.md  data_lineage.md  data_model.md  failover_test_report.md  langfuse_external_observability_prd.md  langfuse_ingestion_feasibility.md  metric_definitions.md  migration_clickhouse_to_doris.md  product_document.md  runtime_runbook.md  stream_batch_platform.md  technical_document.md  three_tier_domain_expansion_plan.md  upgrade_plan.md
flink/: README.md
scripts/: build_dashboard_demo_datasets.py  check_pipeline_health.sh  create_kafka_topics.sh  export_llm_jsonl_to_postgres_copy.py  flink_cancel_job.sh  flink_savepoint.sh  generate_mock_agent_logs.py  generate_mock_compliance_logs.py  generate_mock_evaluation_logs.py  generate_mock_feedback_logs.py  generate_mock_guardrail_logs.py  generate_mock_llm_logs.py  (+74 more)
(+99 files in other folders)
