[project]
name = "ai-observability-lakehouse-docs"
version = "0.1.0"
description = "AI application observability lakehouse with Spark, Flink, Paimon, Doris, and Agent runtime metrics."
authors = [
    { name = "Cheuk Fung Wu" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.40.0",
    "pyarrow>=24.0.0",
    "pymysql>=1.1.1",
    "pyspark>=3.5,<4",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "paimon: tests that require Apache Paimon Spark catalog support",
]
